buildscript {
  dependencies {
    // https://mvnrepository.com/artifact/cz.habarta.typescript-generator/typescript-generator-gradle-plugin
    classpath group: 'cz.habarta.typescript-generator', name: 'typescript-generator-gradle-plugin', version: '2.37.1128'
  }
}

plugins {
  id 'java'
  id 'application'
}
apply plugin: 'cz.habarta.typescript-generator'

group 'net.dangmai'
version '1.0-SNAPSHOT'

applicationDefaultJvmArgs = [
  "--add-opens=java.base/java.lang=ALL-UNNAMED",
  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
  "--add-opens=java.base/java.util=ALL-UNNAMED",
  "--add-opens=java.base/java.text=ALL-UNNAMED"
]
task httpStartScripts(type: CreateStartScripts) {
  mainClass.set('net.dangmai.serializer.server.HttpServer')
  applicationName = 'apex-ast-serializer-http'
  defaultJvmOpts = [
    "--add-opens=java.base/java.lang=ALL-UNNAMED",
    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
    "--add-opens=java.base/java.util=ALL-UNNAMED",
    "--add-opens=java.base/java.text=ALL-UNNAMED"
  ]
  classpath = startScripts.classpath
  outputDir = startScripts.outputDir
}

applicationDistribution.into("bin") {
  from(httpStartScripts)
  fileMode = 0755
}

applicationDistribution.from("build/typings") {
  into "typings"
}

mainClassName = 'net.dangmai.serializer.Apex'

sourceCompatibility = 1.11
targetCompatibility = 1.11

repositories {
  flatDir {
    dirs 'libs'
  }
  mavenCentral()
  maven { url "https://jitpack.io" }
}

run {
  standardInput = System.in
}

tasks.withType(AbstractArchiveTask) {
  // By default, the result ZIP archive is not reproducible,
  // i.e. running `gradle clean distZip` at different times
  // leads to ZIP files that have different md5 sums.
  // This is a workaround to make it reproducible, from:
  // https://dzone.com/articles/reproducible-builds-in-java
  preserveFileTimestamps = false
  reproducibleFileOrder = true
}

distTar {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
distZip {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
  archiveFileName = "${project.name}.zip"
}
distZip.dependsOn generateTypeScript

jar {
  exclude('net/dangmai/types/**')
}

ext {
  slf4jVersion = '2.0.1'
  jettyVersion = '11.0.12'
  jerseyVersion = '3.0.8'
}

dependencies {
  implementation name: 'apex-jorje-lsp'
  // https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream
  implementation group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.19'

  implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
  implementation "org.slf4j:slf4j-api:${slf4jVersion}"
  implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
  implementation "org.eclipse.jetty:jetty-server:${jettyVersion}"
  implementation "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
  implementation "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
  implementation "org.glassfish.jersey.containers:jersey-container-servlet-core:${jerseyVersion}"
  implementation "org.glassfish.jersey.containers:jersey-container-jetty-http:${jerseyVersion}"
  implementation "org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}"
  implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"

  // https://mvnrepository.com/artifact/jakarta.activation/jakarta.activation-api
  implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.1.0'

  // https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime
  implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '4.0.1'

  // https://mvnrepository.com/artifact/commons-cli/commons-cli
  implementation group: 'commons-cli', name: 'commons-cli', version: '1.5.0'

  // https://mvnrepository.com/artifact/commons-io/commons-io
  implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'

  // https://mvnrepository.com/artifact/cz.habarta.typescript-generator/typescript-generator-core
  compileOnly group: 'cz.habarta.typescript-generator', name: 'typescript-generator-core', version: '2.37.1128'

  // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.0'
  testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.0'

  // https://mvnrepository.com/artifact/org.json/json
  testImplementation group: 'org.json', name: 'json', version: '20220320'
}

test {
  useJUnitPlatform()
}

generateTypeScript {
  jsonLibrary = 'jackson2'
  classes = [
    'apex.jorje.semantic.compiler.parser.ParserOutput',
  ]
  classPatterns = [
    'apex.jorje.data.**',
    'apex.jorje.parser.impl.HiddenToken**',
  ]
  excludeClassPatterns = [
    'apex.jorje.**$MatchBlock',
    'apex.jorje.**$MatchBlockWithDefault',
    'apex.jorje.**$SwitchBlock',
    'apex.jorje.**$SwitchBlockWithDefault',
    'apex.jorje.**$Visitor',
    'apex.jorje.**Factory',
    'apex.jorje.**Decorator',
  ]
  customTypeNaming = [
    'apex.jorje.data.ast.Expr$LiteralExpr:ExprLiteralExpr',
    'apex.jorje.data.soql.QueryExpr$LiteralExpr:QueryExprLiteralExpr',
  ]
  customTypeProcessor = 'net.dangmai.types.CustomTypeProcessor'
  outputFile = 'build/typings/jorje.d.ts'
  outputKind = 'module'
  extensionClasses = [
    'net.dangmai.types.CustomEnumExtension',
    'net.dangmai.types.CustomFieldExtension',
    'net.dangmai.types.UnionTypeExtension',
    'net.dangmai.types.GenericNodeExtension',
  ]
  sortDeclarations = true
  noFileComment = true
}

